<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryVeryLight">
    
    <!--Select fish specie-->
    <TextView
        style="@style/EditPhotoDataTextStyle"
        android:id="@+id/editFishPicture_specieTip"
        android:text="@string/edit_picture_specie"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginLeft="@dimen/edit_catch_sides_margins"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <Spinner
        android:id="@+id/editFishPicture_specie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginLeft="@dimen/edit_catch_margins_between_texts"
        android:layout_marginRight="@dimen/edit_catch_sides_margins"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/editFishPicture_specieTip"
        android:background="@color/white_not_transparent"/>

    <!--Select catch location-->
    <TextView
        style="@style/EditPhotoDataTextStyle"
        android:id="@+id/editFishPicture_locationTip"
        android:text="@string/edit_picture_location"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginLeft="@dimen/edit_catch_sides_margins"
        android:layout_below="@id/editFishPicture_specieTip"
        android:layout_alignParentLeft="true"/>

    <EditText
        style="@style/EditPhotoDataTextStyle"
        android:width="@dimen/edit_catch_long_edittext_length"
        android:id="@+id/editFishPicture_location"
        android:gravity="center"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginLeft="@dimen/edit_catch_margins_between_texts"
        android:layout_marginRight="@dimen/edit_catch_sides_margins"
        android:layout_below="@id/editFishPicture_specieTip"
        android:layout_toRightOf="@id/editFishPicture_locationTip"
        android:background="@color/white_not_transparent"
        android:inputType="text"
        android:imeOptions="actionNext"/>


    <!--Select catch date-->
    <TextView
        style="@style/EditPhotoDataTextStyle"
        android:id="@+id/editFishPicture_dateTip"
        android:text="@string/edit_picture_date"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginLeft="@dimen/edit_catch_sides_margins"
        android:layout_below="@id/editFishPicture_locationTip"
        android:layout_alignParentLeft="true"/>

    <EditText
        style="@style/EditPhotoDataTextStyle"
        android:width="@dimen/edit_catch_long_edittext_length"
        android:id="@+id/editFishPicture_date"
        android:gravity="center"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginStart="@dimen/edit_catch_margins_between_texts"
        android:layout_marginEnd="@dimen/edit_catch_sides_margins"
        android:layout_below="@id/editFishPicture_locationTip"
        android:layout_toRightOf="@id/editFishPicture_dateTip"
        android:background="@color/white_not_transparent"
        android:focusable="false"
        android:imeOptions="actionNext"/>


    <!--Select catch length-->
    <TextView
        style="@style/EditPhotoDataTextStyle"
        android:id="@+id/editFishPicture_lengthTip"
        android:text="@string/edit_picture_length"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginLeft="@dimen/edit_catch_sides_margins"
        android:layout_below="@id/editFishPicture_dateTip"
        android:layout_alignParentLeft="true"/>

    <EditText
        style="@style/EditPhotoDataTextStyle"
        android:width="@dimen/edit_catch_long_edittext_length"
        android:id="@+id/editFishPicture_length"
        android:gravity="center"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginStart="@dimen/edit_catch_margins_between_texts"
        android:layout_below="@id/editFishPicture_dateTip"
        android:layout_toRightOf="@id/editFishPicture_lengthTip"
        android:background="@color/white_not_transparent"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"/>

    <TextView
        style="@style/EditPhotoDataTextStyle"
        android:id="@+id/editFishPicture_lengthUnit"
        android:text="@string/edit_picture_length_unit"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginLeft="@dimen/edit_catch_sides_margins"
        android:layout_marginStart="@dimen/edit_catch_margins_between_texts"
        android:layout_below="@id/editFishPicture_dateTip"
        android:layout_toRightOf="@id/editFishPicture_length"/>


    <!--Select catch Weight-->
    <TextView
        style="@style/EditPhotoDataTextStyle"
        android:id="@+id/editFishPicture_weightTip"
        android:text="@string/edit_picture_weight"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginLeft="@dimen/edit_catch_sides_margins"
        android:layout_below="@id/editFishPicture_lengthTip"
        android:layout_alignParentLeft="true"/>

    <EditText
        style="@style/EditPhotoDataTextStyle"
        android:width="@dimen/edit_catch_long_edittext_length"
        android:id="@+id/editFishPicture_weight"
        android:gravity="center"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginStart="@dimen/edit_catch_margins_between_texts"
        android:layout_below="@id/editFishPicture_lengthTip"
        android:layout_toRightOf="@id/editFishPicture_weightTip"
        android:background="@color/white_not_transparent"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"/>

    <TextView
        style="@style/EditPhotoDataTextStyle"
        android:id="@+id/editFishPicture_weightUnit"
        android:text="@string/edit_picture_weight_unit"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginLeft="@dimen/edit_catch_sides_margins"
        android:layout_marginStart="@dimen/edit_catch_margins_between_texts"
        android:layout_below="@id/editFishPicture_lengthTip"
        android:layout_toRightOf="@id/editFishPicture_weight"/>


    <!--Save Fish Catch Button-->
    <Button
        android:id="@+id/editFishPicture_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_catch_sides_margins"
        android:layout_marginBottom="@dimen/edit_catch_sides_margins"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@color/white_not_transparent"
        android:layout_below="@+id/editFishPicture_weightTip"
        android:text="@string/edit_picture_save_data" />

</RelativeLayout>